--- a/prayer.html
+++ b/prayer.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Submit your prayer request to Besorah Yeshua International Ministry. Our community is here to pray with you.">
     <title>Prayer Requests - Besorah Yeshua International Ministry</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/prayer.css"> <!-- Add this line -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
