--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Besorah Yeshua International Ministry - Spreading the Gospel across Ethiopia through evangelism, discipleship, and church planting.">
     <title>Besorah Yeshua International Ministry - Home</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/hero.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
